Improved the UI.

--- a/src/app/Noya-Apps/QueriesList/QueriesList.component.html
+++ b/src/app/Noya-Apps/QueriesList/QueriesList.component.html
@@ -1,10 +1,10 @@
 <div class="spmeta container" dir="rtl">
 
-  <div class="nine">
+  <!-- <div class="nine">
     <h1>
       {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
     </h1>
-  </div>
+  </div> -->
 
   <!-- Header -->
   <div class="header">
