--- a/src/app/global-app-permission/global-app-permission.component.html
+++ b/src/app/global-app-permission/global-app-permission.component.html
@@ -217,8 +217,11 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
-  </mat-table>
+    <mat-row
+    *matRowDef="let row; columns: columns"
+    class="mat-row clickable-row"
+    (click)="openAdGroupsDialog(row)">
+  </mat-row>  </mat-table>
 
   <!-- Paginator -->
   <mat-paginator
