--- a/src/app/Noya-Apps/QueriesList/QL-dialog.component.html
+++ b/src/app/Noya-Apps/QueriesList/QL-dialog.component.html
@@ -26,7 +26,7 @@
       </mat-form-field>
 
       <mat-form-field appearance="fill" class="full-width">
-        <mat-label>נושא משנה</mat-label>
+        <mat-label>תת נושא</mat-label>
         <input matInput formControlName="SubSubject">
       </mat-form-field>
 
@@ -66,7 +66,7 @@
         </mat-autocomplete>
       </mat-form-field>
 
-      <mat-checkbox formControlName="IsActive">פעילה</mat-checkbox>
+      <mat-checkbox formControlName="IsActive">פעיל</mat-checkbox>
 
       <div class="form-actions">
         <button mat-flat-button color="primary" type="submit">שמירה</button>
