--- a/src/app/chameleon-reports/diabetes-daily-report/diabetes-daily-report.component.html
+++ b/src/app/chameleon-reports/diabetes-daily-report/diabetes-daily-report.component.html
@@ -173,9 +173,10 @@
   
       <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
       <mat-row
-        *matRowDef="let row; columns: columns"
-        class="clickable-row"
-      ></mat-row>
+      *matRowDef="let row; columns: columns"
+      class="clickable-row"
+      (click)="openLabsDialog(row)"
+    ></mat-row>
     </mat-table>
   
     <mat-paginator
